# rgpio-sht4x

./: README.md  pyproject.toml
src/rgpio_sht4x/: __init__.py
tests/: test_sht4x.py
